--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -57,10 +57,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="https://twitter.com/abdulshak1999/" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://facebook.com/abdulshak1999/" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://github.com/abdulshak1999/" class="github"><i class="icofont-github"></i></a>
-        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
+        <a href="https://facebook.com/abdulshak1999/" class="facebook" target="_blank"><i class="icofont-facebook"></i></a>
+        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i></a>
+        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -75,11 +75,10 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d122958.00491357196!2d32.5287187!3d15.621666049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1609012087551!5m2!1sen!2s" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
@@ -89,19 +88,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Khartoum, East Nile</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>shoukreytom@pm.me</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>(249) 121 253 239</p>
               </div>
 
             </div>
