--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'img/favicon.png' %}" rel="icon">
+  <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -57,10 +57,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="https://twitter.com/abdulshak1999/" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://facebook.com/abdulshak1999/" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://github.com/abdulshak1999/" class="github"><i class="icofont-github"></i></a>
-        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
+        <a href="https://facebook.com/abdulshak1999/" class="facebook" target="_blank"><i class="icofont-facebook"></i></a>
+        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i></a>
+        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
       </div>
 
     </div>
