--- a/home/templates/home/resume.html
+++ b/home/templates/home/resume.html
@@ -58,10 +58,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="https://twitter.com/abdulshak1999/" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://facebook.com/abdulshak1999/" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://github.com/abdulshak1999/" class="github"><i class="icofont-github"></i></a>
-        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
+        <a href="https://facebook.com/abdulshak1999/" class="facebook" target="_blank"><i class="icofont-facebook"></i></a>
+        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i></a>
+        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -76,66 +76,64 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Shoukrey Tom</h4>
+              <p><em>Back End Developer with a solid experience in java, C, and Python.</em></p>
               <p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Khartoum, Sudan</li>
+                <li>+249121253239</li>
+                <li>shoukreytom@pm.me</li>
               </ul>
               </p>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Junior Software Developer</h4>
+              <h5>Oct 2020 - Present</h5>
+              <p><em>Ashraf, Khartoum</em></p>
+              <p>
+              <ul>
+                <li>Develop Software of Point Of Sales (POS)</li>
+                <li>Technical Support</li>
+              </ul>
+              </p>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Bachelor of Electronics Engineering</h4>
+              <h5>2017 - Present</h5>
+              <p><em>Sudan University of Science and Technology, Khartoum</em></p>
+            </div>
+
+            <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item">
+              <h4>Django for Everybody Specialization</h4>
+              <h5>Oct 2020</h5>
+              <p><em>Coursera</em></p>
               <p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+                <a href="https://coursera.org/verify/specialization/H5KRF73KVRZM" class="btn btn-primary" target="_blank">Take a look</a>
               </p>
             </div>
+
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Python (Basic)</h4>
+              <h5>Sep 2020</h5>
+              <p><em>HackerRank</em></p>
               <p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+                <a href="https://www.hackerrank.com/certificates/594274787193/" class="btn btn-primary" target="_blank">Take a look</a>
               </p>
             </div>
+
           </div>
         </div>
 
