--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -524,7 +524,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/bg-1.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
