added meta tags for url preview

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,6 +9,11 @@
   <title>Shoukrey Tom</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta property="og:title" content="Shoukrey Tom" />
+  <meta property="og:type" content="Portfolio" />
+  <meta property="og:url" content="https://shoukrey.herokuapp.com/" />
+  <meta property="og:image" content="{% static 'img/about.jpg' %}" />
+
 
   <!-- Favicons -->
   <link href="{% static 'img/favicon.png' %}" rel="icon">
