--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -53,7 +53,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="#hero">Home</a></li>
+          <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#resume">Resume</a></li>
@@ -77,7 +77,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shoukrey Tom</h1>
-      <h2>I'm a back end developer from Sudan</h2>
+      <h2>back end developer</h2>
       <a href="#about" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
@@ -254,7 +254,7 @@
           <div class="resume-item">
             <h4>Django for Everybody Specialization</h4>
             <h5>Oct 2020</h5>
-            <p><em>Coursera</em></p>
+            <p><em>University of Michigan</em></p>
             <p>
               <a href="https://coursera.org/verify/specialization/H5KRF73KVRZM" class="btn btn-primary" target="_blank">Take a look</a>
             </p>
@@ -281,16 +281,15 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p></p>
       </div>
 
       <div class="row" data-aos="fade-up" data-aos-delay="100">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
+            <li data-filter=".filter-app">Desktop Apps</li>
+            <li data-filter=".filter-web">Web Apps</li>
           </ul>
         </div>
       </div>
