--- a/home/templates/home/portfolio-details.html
+++ b/home/templates/home/portfolio-details.html
@@ -48,7 +48,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title" style="text-transform: capitalize;">{{ portfolio.title }}</h2>
             <div class="owl-carousel portfolio-details-carousel">
               <img src="{% static 'img/portfolio/portfolio-details-1.jpg' %}" class="img-fluid" alt="">
               <img src="{% static 'assets/img/portfolio/portfolio-details-2.jpg' %}" class="img-fluid" alt="">
@@ -59,14 +59,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: {{ portfolio.port_type }}</li>
+              <!-- <li><strong>Client</strong>: ASU Company</li> -->
+              <li><strong>Project date</strong>: {{ portfolio.created }}</li>
+              <li><strong>Project URL</strong>: <a href="{{ portfolio.url }}">{{ portfolio.url }}</a></li>
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              {{ portfolio.description }}
             </p>
           </div>
 
