:bomb: :bomb: :bomb: removed facebook linke and added labels to social accounts :star: :star: :star:

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -63,10 +63,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
-        <a href="https://facebook.com/abdulshak1999/" class="facebook" target="_blank"><i class="icofont-facebook"></i></a>
-        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i></a>
-        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i>Twitter</a>
+        <!-- <a href="https://facebook.com/abdulshak1999/" class="fiverr" target="_blank"><i class="icofont-fiverr"></i></a> -->
+        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i>Github</a>
+        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i>LinkedIn</a>
       </div>
 
     </div>
