--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -78,7 +78,7 @@
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shoukrey Tom</h1>
       <h2>back end developer</h2>
-      <a href="#about" class="btn-about">About Me</a>
+      <a href="{% url 'visit-cv' %}" class="btn-about">View My-CV</a>
     </div>
   </section><!-- End Hero -->
 
