add fiverr to the social headers list

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,6 +21,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -64,7 +65,7 @@
 
       <div class="header-social-links">
         <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i>Twitter</a>
-        <!-- <a href="https://facebook.com/abdulshak1999/" class="fiverr" target="_blank"><i class="icofont-fiverr"></i></a> -->
+        <a href="https://fiverr.com/abdulshak1999/" class="fiverr" target="_blank"><i class="fa fa-fonticons"></i>Fiverr</a>
         <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i>Github</a>
         <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i>LinkedIn</a>
       </div>
@@ -78,7 +79,7 @@
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shoukrey Tom</h1>
       <h2>back end developer</h2>
-      <a href="{% url 'visit-cv' %}" class="btn-about">View My-CV</a>
+      <a href="{% url 'visit-cv' %}" class="btn-about" target="_blank">View My-CV</a>
     </div>
   </section><!-- End Hero -->
 
@@ -123,8 +124,7 @@
             </div>
           </div>
           <p>
-            My name is <em>Abdul Shakoor Abdul Azeem Mousa Tom</em>, known as <em>Shoukrey Tom</em>. I am student of Electronics Engineering at Sudan University of Science and Technology, and Junior Software Developer at
-            Ashraf.
+            My name is <em>Abdul Shakoor Abdul Azeem Mousa Tom</em>, known as <em>Shoukrey Tom</em>. I am student of Electronics Engineering at Sudan University of Science and Technology, and Software Developer.
           </p>
         </div>
       </div>
