--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -232,7 +232,7 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>Junior Software Developer</h4>
-            <h5>Oct 2020 - Present</h5>
+            <h5>Oct 2020 - Jan 2021</h5>
             <p><em>Ashraf, Khartoum</em></p>
             <p>
             <ul>
