--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -88,7 +88,7 @@
 
       <div class="row">
         <div class="col-lg-4">
-          <img src="{% static 'img/about.jpg' %}" class="img-fluid" alt="">
+          <img src="{% static 'img/about.png' %}" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content">
           <h3>Back End Developer</h3>
