fix server error, (django-summernote)

--- a/home/templates/home/404.html
+++ b/home/templates/home/404.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html lang="en">
 
 <head>
@@ -28,7 +29,7 @@
 <body>
     <main>
         <section>
-            <div>
+            <div class="container text-center">
                 <h3>404 Page Not Found</h3>
                 <p>I'm so sorry, this page is found</p>
                 <a href="{% url 'home' %}" class="btn btn-primary">Go to Home Page</a>
