--- a/home/templates/home/500.html
+++ b/home/templates/home/500.html
@@ -1,9 +1,10 @@
+{% load static %}
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Server Error</title>
     <link href="{% static 'img/favicon.png' %}" rel="icon">
     <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
@@ -25,6 +26,14 @@
 </head>
 
 <body>
+	<main>
+        <section>
+            <div class="container text-center">
+                <h3>500 Server error</h3>
+                <p>please! come back later, we've got a little problem.</p>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
