--- a/home/templates/home/portfolio-details.html
+++ b/home/templates/home/portfolio-details.html
@@ -66,7 +66,7 @@
               <li><strong>Live Demo</strong>: <a href="{{ portfolio.url }}">{{ portfolio.live_url }}</a></li>
 			  {% endif %}
 			  {% if portfolio.source_url %}
-			  <li><strong>Source Code</strong>: <a href="{{ portfolio.url }}">{{ portfolio.source }}</a></li>
+			  <li><strong>Source Code</strong>: <a href="{{ portfolio.url }}">{{ portfolio.source_url }}</a></li>
 			  {% endif %}
             </ul>
 
