--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -58,10 +58,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i>Twitter</a>
-        <a href="https://fiverr.com/abdulshak1999/" class="fiverr" target="_blank"><i class="fa fa-fonticons"></i>Fiverr</a>
-        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i>Github</a>
-        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i>LinkedIn</a>
+        <a href="https://twitter.com/shoukreytom/" class="twitter" target="_blank"><i class="icofont-twitter"></i>Twitter</a>
+<!--         <a href="https://fiverr.com/abdulshak1999/" class="fiverr" target="_blank"><i class="fa fa-fonticons"></i>Fiverr</a> -->
+        <a href="https://github.com/shoukreytom/" class="github" target="_blank"><i class="icofont-github"></i>Github</a>
+        <a href="https://linkedin.com/in/shoukreytom/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i>LinkedIn</a>
       </div>
 
     </div>
