update skill, add JavaScript and React

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -58,10 +58,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="https://twitter.com/abdulshak1999/" class="twitter" target="_blank"><i class="icofont-twitter"></i>Twitter</a>
-        <a href="https://fiverr.com/abdulshak1999/" class="fiverr" target="_blank"><i class="fa fa-fonticons"></i>Fiverr</a>
-        <a href="https://github.com/abdulshak1999/" class="github" target="_blank"><i class="icofont-github"></i>Github</a>
-        <a href="https://linkedin.com/in/abdulshak1999/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i>LinkedIn</a>
+        <a href="https://twitter.com/shoukreytom/" class="twitter" target="_blank"><i class="icofont-twitter"></i>Twitter</a>
+        <a href="https://facebook.com/shoukreytom/" class="facebook" target="_blank"><i class="fa fa-facebook"></i>Facebook</a>
+        <a href="https://github.com/shoukreytom/" class="github" target="_blank"><i class="icofont-github"></i>Github</a>
+        <a href="https://linkedin.com/in/shoukreytom/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i>LinkedIn</a>
       </div>
 
     </div>
@@ -83,7 +83,6 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>I am a passionate self-taught back-end developer with a solid experience in core technologies of C, Java, and Python.</p>
       </div>
 
       <div class="row">
@@ -93,6 +92,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content">
           <h3>Back End Developer</h3>
           <p class="font-italic">
+            a back-end developer with a good experience on designing RESTFull APIs using a robut web framework (Django) and powerfull programming language (Python).
             <br>
           </p>
           <div class="row">
@@ -118,7 +118,8 @@
             </div>
           </div>
           <p>
-            My name is <em>Abdul Shakoor Abdul Azeem Mousa Tom</em>, known as <em>Shoukrey Tom</em>. I am student of Electronics Engineering at Sudan University of Science and Technology, and Software Developer.
+            My name is Abdul Shakoor Abdul Azeem Mousa but known as Shoukrey Tom, I am a passionate self-taught Software Developer with good experience in core technologies of C, Java, and Python.<br/>
+            I develop both Desktop apps and Web apps, but my main focus is on Developing web apps especially Building REST APIS using Django & DRF (Django REST Framework).
           </p>
         </div>
       </div>
@@ -167,6 +168,13 @@
             </div>
           </div>
 
+          <div class="progress">
+            <span class="skill">React JS <i class="val">60%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
         </div>
 
         <div class="col-lg-6">
@@ -186,7 +194,14 @@
           </div>
 
           <div class="progress">
-            <span class="skill">C <i class="val">90%</i></span>
+            <span class="skill">JavaScript <i class="val">60%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">C/C++ <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -210,17 +225,41 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
-          <div class="resume-item pb-0">
-            <h4>Shoukrey Tom</h4>
-            <p><em>Back End Developer with a solid experience in java, C, and Python.</em></p>
+          <h3 class="resume-title">Certifications</h3>
+          <div class="resume-item">
+            <h4>Django for Everybody Specialization</h4>
+            <h5>Oct 2020</h5>
+            <p><em>University of Michigan</em></p>
             <p>
-            <ul>
-              <li>Khartoum, Sudan</li>
-              <li>+249121253239</li>
-              <li>shoukreytom@pm.me</li>
-            </ul>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/H5KRF73KVRZM" class="btn btn-primary" target="_blank">Take a look</a>
             </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Python for Everybody Specialization</h4>
+            <h5>Oct 2020</h5>
+            <p><em>University of Michigan</em></p>
+            <p>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/6XV5W6KPC3KV" class="btn btn-primary" target="_blank">Take a look</a>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Python (Basic)</h4>
+            <h5>Sep 2020</h5>
+            <p><em>HackerRank</em></p>
+            <p>
+              <a href="https://www.hackerrank.com/certificates/594274787193/" class="btn btn-primary" target="_blank">Take a look</a>
+            </p>
+          </div>
+
+        </div>
+        <div class="col-lg-6">
+          <h3 class="resume-title">Education</h3>
+          <div class="resume-item">
+            <h4>Bachelor of Electronics Engineering</h4>
+            <h5>2017 - Present</h5>
+            <p><em>Sudan University of Science and Technology, Khartoum</em></p>
           </div>
 
           <h3 class="resume-title">Professional Experience</h3>
@@ -235,34 +274,6 @@
             </ul>
             </p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <h3 class="resume-title">Education</h3>
-          <div class="resume-item">
-            <h4>Bachelor of Electronics Engineering</h4>
-            <h5>2017 - Present</h5>
-            <p><em>Sudan University of Science and Technology, Khartoum</em></p>
-          </div>
-
-          <h3 class="resume-title">Certifications</h3>
-          <div class="resume-item">
-            <h4>Django for Everybody Specialization</h4>
-            <h5>Oct 2020</h5>
-            <p><em>University of Michigan</em></p>
-            <p>
-              <a href="https://coursera.org/verify/specialization/H5KRF73KVRZM" class="btn btn-primary" target="_blank">Take a look</a>
-            </p>
-          </div>
-
-          <div class="resume-item">
-            <h4>Python (Basic)</h4>
-            <h5>Sep 2020</h5>
-            <p><em>HackerRank</em></p>
-            <p>
-              <a href="https://www.hackerrank.com/certificates/594274787193/" class="btn btn-primary" target="_blank">Take a look</a>
-            </p>
-          </div>
-
         </div>
       </div>
 
