--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -92,7 +92,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content">
           <h3>Back End Developer</h3>
           <p class="font-italic">
-            a back-end developer with a good experience on designing RESTFull APIs using a robut web framework (Django) and powerfull programming language (Python).
+            a back-end developer with a good experience on designing RESTFull APIs using a robust web framework (Django) and a powerfull programming language (Python).
             <br>
           </p>
           <div class="row">
