comment Website + Nationality items

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -101,7 +101,7 @@
                 <li><i class="icofont-rounded-right"></i> <strong>First Name:</strong> Abdul Shakoor</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Middle Name:</strong> Abdul Azeem</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Last Name:</strong> Mousa</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Notionality:</strong> Sudanese</li>
+                <!-- <li><i class="icofont-rounded-right"></i> <strong>Notionality:</strong> Sudanese</li> -->
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Khartoum, Sudan</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (249) 121 253 239</li>
               </ul>
@@ -111,8 +111,8 @@
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 7 Jan 1999</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Undergraduate</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://shoukreytom.herokuapp.com" target="_blank">click here</a></li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> shoukreytom@pm.me</li>
+                <!-- <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://shoukreytom.herokuapp.com" target="_blank">click here</a></li> -->
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> shoukreytom01@gmail.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
