highlight important sentences

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -118,8 +118,8 @@
             </div>
           </div>
           <p>
-            My name is Abdul Shakoor Abdul Azeem Mousa but known as Shoukrey Tom, I am a passionate self-taught Software Developer with good experience in core technologies of C, Java, and Python.<br/>
-            I develop both Desktop apps and Web apps, but my main focus is on Developing web apps especially Building REST APIS using Django & DRF (Django REST Framework).
+            My name is <strong>Abdul Shakoor Abdul Azeem Mousa</strong> known as <em>Shoukrey Tom</em>, I am a passionate self-taught Software Developer with good experience in core technologies of C/C++, Java, and Python.<br/>
+            I develop both Desktop apps and Web apps, but my main focus is on Developing web applications, especially Building REST APIS using Django & DRF (Django REST Framework).
           </p>
         </div>
       </div>
